--- a/style.css
+++ b/style.css
@@ -1,164 +1,514 @@
+@import url("https://fonts.googleapis.com/css2?family=Exo+2:wght@300&display=swap");
 
-
-@import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@300&display=swap');
-
-*{
-    padding: 0;
-    margin: 0;
+* {
+  padding: 0;
+  margin: 0;
 }
-body{
-    font-family: sans-serif;
-    box-sizing: border-box;
+body {
+  font-family: "Exo 2", sans-serif;
+  box-sizing: border-box;
 }
-
-nav h1{
-    color: #9157FB;
-    padding-top: 10px;
-    margin-left: 1rem;
-    font-size: 2rem;
-    font-family: 'Exo 2', sans-serif;
+nav {
+  display: flex;
+  align-items: center;
+  height: 60px;
 }
-
-h2{
-    font-size: 1.5rem;
-    font-family: 'Exo 2', sans-serif;
+nav h1 {
+  color: #9157fb;
+  margin-left: 1rem;
+  font-size: 2rem;
+  font-family: "Exo 2", sans-serif;
 }
-nav{
-    display: flex;
-    border: 2px solid red;
-}
-nav>.left, nav>.right{
-    border: 2px solid green;
+nav select {
+  font-size: 12px;
+  color: rgb(64, 64, 64);
+  border: 1px #ccc solid;
+  border-radius: 0.5rem;
+  height: 30px;
+  width: 100px;
+  outline: none;
 }
 
-nav>.left{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 50%;
+h2 {
+    color: #222222;
+  font-size: 1.5rem;
+  font-family: "Exo 2", sans-serif;
+}
+nav {
+  display: flex;
 }
 
-nav>.right{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 50%;
-}
-nav>.left>h2{
-    background: #9157FB;
+nav > .left {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 50%;
 }
 
-.sec-1{
-    min-height: 450px;
-    display: flex;
-    background: pink;
+nav > .right {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 50%;
 }
-.sec-1 h3{
-    padding: 1rem;
-    border-radius: 4px;
-    margin-bottom: 1rem;
-    border-bottom: 2px solid #ccc;
+nav > .left > h2 {
+  font-size: 18px;
+  margin-right: 6rem;
 }
-.sec-1>.left{
-    padding: 1rem;
-    width: 50%;
-    background: yellow;
+.wallet {
+  margin: auto 5rem;
+  font-family: "Exo 2", sans-serif;
+  font-size: 14px;
+  color: #333;
+  border: solid 1px #ccc;
+  border-radius: 5px;
+  display: flex;
+  padding: 5px;
+  align-items: center;
+  justify-content: center;
 }
-.sec-1>.right{
-    background: skyblue;
+.wallet img {
+  margin-right: 10px;
 }
-.sec-1>.left>h2{
-    width: 70%;
-    margin: 2rem;
+
+#profile-pop {
+  padding: 5px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  z-index: 1;
+  position: absolute;
+  top: 60px;
+  width: 200px;
+  right: 50px;
+  background: #ffff;
+  border-radius: 8px;
+  display: none;
+}
+#profile-pop h2 {
+  width: 100%;
+  padding: 5px;
+  border-bottom: 2px solid #ccc;
+  margin-bottom: 1rem;
+}
+#profile-pop h3 {
+  margin-left: -3rem;
+  font-size: 14px;
+  color: #333;
+}
+#profile-pop img {
+  margin-left: 0.8rem;
+  width: 70px;
+}
+.logout {
+  padding: 5px;
+  color: #7315fc;
+  border-top: 2px solid #ccc;
+  margin-top: 5px;
+}
+
+/* --------------------------Section-1--------------------------- */
+
+.sec-1 {
+  min-height: 450px;
+  display: flex;
+}
+.sec-1 h3 {
+    color: #222222;
+  padding: 1rem;
+  padding-bottom: 3rem;
+  margin-bottom: 2rem;
+  margin-top: 2rem;
+  border-bottom:  1px solid rgba(34, 34, 34, 0.4);;
+}
+.sec-1 > .left {
+  padding: 1rem;
+  width: 50%;
+}
+.sec-1 > .right {
+  position: relative;
+  width: 50%;
+}
+.sec-1 > .right > .img-1 {
+  width: 380px;
+  border-radius: 1rem;
+  position: absolute;
+  top: 220px;
+}
+.sec-1 > .right > .img-2 {
+  width: 380px;
+  border-radius: 1rem;
+  position: absolute;
+  top: 80px;
+  left: 200px;
+}
+.sec-1 > .left > h2 {
+  width: 70%;
+  margin: 1rem;
   font-size: 2rem;
 }
-.sec-1>.left>.ratings{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    background: seagreen;
+.sec-1 > .left > .ratings {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
 }
-.sec-1 .rating{
-    width: 28%;
-    padding: 10px;
-    border-radius: 4px;
-    border: solid 1px #ccc;
-    background-color: pink;
+.sec-1 .rating {
+  width: 28%;
+  padding: 10px;
+  border-radius: 8px;
+  border: 1px solid rgba(153, 140, 232, 0.4);
 }
 
-.sec-1 .btn{
- background: #7115FD;
- border-radius: 5px;
- color: #fff;
- width: 70px;
- padding: 5px 15px;
- font-size: 16px;
- margin-top: 1rem;
+.sec-1 .btn {
+  background: #7115fd;
+  border-radius: 8px;
+  color: #fff;
+  width: 70px;
+  padding: 10px 18px;
+  font-size: 16px;
+  margin-top: 1rem;
+  margin-left: 4 px;
 }
 
-.sec-2{
-    min-height: 450px;
-    font-size: 2rem;
-    background: rgb(115, 220, 161);
+/* --------------------------Section-2--------------------------- */
+
+
+.sec-2 {
+  position: relative;
+  min-height: 450px;
+  font-size: 2rem;
 }
-.sec-2 h2{
+.sec-2 h2 {
   width: fit-content;
   margin: 1rem auto;
 }
-.btns{
+.btns {
+  display: flex;
+  justify-content: center;
+}
+.sec-2 .btn {
+  font-size: 15px;
+  border: 1px #222 solid;
+  border-radius: 8px;
+  padding: 6px;
+  margin: 10px;
+}
+.sec-2 .image-carsual {
+  margin-top: 2rem;
+  display: flex;
+}
+.sec-2 .image-carsual .card {
+  position: relative;
+  width: 200px;
+  margin: 4px;
+  border-radius: 0.5rem;
+}
+.sec-2 img {
+  border-radius: 8px;
+  height: 300px;
+  width: 100%;
+  overflow: hidden;
+}
+.image-carsual > div > h3 {
+  color: #fff;
+  font-size: 22px;
+  position: absolute;
+  bottom: 60px;
+  left: 10px;
+}
+.image-carsual > div > p {
+  color: #fff;
+  font-size: 16px;
+  position: absolute;
+  bottom: 20px;
+  left: 10px;
+}
+/* --------------------------Section-3--------------------------- */
+
+.sec-3 {
+  background: #f6f4f8;
+  padding: 1rem;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+}
+.sec-3 h3,
+.sec-3 h2 {
+  color: #222222;
+  width: fit-content;
+  margin: 1rem auto;
+}
+.sec-3 p {
+  margin-top: 1rem;
+}
+
+/* --------------------------Section-4--------------------------- */
+
+
+.sec-4 {
+  min-height: 400px;
+}
+
+.sec-4 h3,
+.sec-4 h2 {
+  width: fit-content;
+  margin: 1rem auto;
+}
+
+.sec-4 .cards {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.sec-4 .cards > .card {
+  display: flex;
+  width: 40%;
+  margin: 0.5rem;
+  border-radius: 1rem;
+  padding: 10px;
+}
+/* --------------------------Section-5--------------------------- */
+
+.sec-5{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 4rem;
+}
+
+.sec-5 .cards{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+.sec-5 .cards .card{
+    box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.1);
+    margin: 10px;
+    padding: 8px;
+    border-radius: 8px;
+    width: 40%;
+    display: flex;
+}
+.sec-5 img{
+    margin: 10px;
+    width: 30px;
+    height: 30px;
+}
+.sec-5 p{
+    font-size: 14px;
+    margin-top: 10px;
+}
+
+.tags{
+    display: flex;
+    justify-content: center;
+}
+.tag{
+    font-size: 12px;
+    margin: 5px 15px;
+    border: solid 1px #9157fb;
+    border-radius: 20px;
+    padding: 4px 12px;
+
+}
+
+/* --------------------------Section-6--------------------------- */
+
+
+.sec-6{
+    margin-top: 4rem;
+}
+.sec-6>h2{
+    width: fit-content;
+    margin: 0 auto;
+}
+.sec-6 .cards{
+    display: flex;
+}
+.sec-6 .card{
+    text-align: center;
+    padding: 1rem;
+}
+.sec-6 p{
+    padding: 8px;
+}
+/* --------------------------Section-7--------------------------- */
+
+
+
+.sec-7{
+    display: flex;
+    flex-direction: column;
+    font-size: 36px;
+    margin: 40px 0;
+}
+.sec-7 h2{
+    text-align: center;
+}
+.sec-7 .cards{
     display: flex;
     justify-content: space-between;
-    background-color: red;
+    padding: 40px;
 }
-.sec-2 .btn{
-    background-color: skyblue;
-    border-radius: 6px;
-    padding: 4px;
-}
-.sec-2 .image-carsual{
-    margin-top: 2rem;
+.sec-7 .cards>div{
     display: flex;
-    background: pink;
+    width: 184px;
+    box-sizing: border-box;
+    height: 304px;
 }
-.sec-2 .image-carsual .card{
-    background: green;
-    margin: 4px;
-    border-radius: .5rem;
+.sec-7 .cards>.card{
+    overflow: hidden;
+    background: #FFFFFF;
+    box-shadow: 0px 8px 24px rgba(0, 0, 0, 0.1);
+    border-radius: 16px;
+    flex-direction: column;
 }
-
-.sec-3{
-    min-height: 450px;
-    background: rgb(243, 203, 129);
-}
-.sec-3 h3, .sec-3 h2{
-    width: fit-content;
-    margin: 1rem auto;
-}
-.sec-3 p{
-    margin-top: 1rem;
-}
-
-.sec-4{
-    background: skyblue;
-    min-height: 400px;
-}
-
-.sec-4 h3, .sec-4 h2{
-    width: fit-content;
-    margin: 1rem auto;
-}
-
-.sec-4 .cards{
-    background: greenyellow;
-}
-.sec-4 .cards>.card{
+.sec-7 .image{
     display: flex;
-    background: pink;
-    margin: .5rem;
-    border-radius: 1rem;
-    padding: 10px;
+    align-items: center;
+    justify-content: center;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url('/assets/galaxy.jpg');
+    background-position: center;
+    background-size: cover;
+    height: 120px;
 }
-.sec-4 .cards>.card>div{
+.sec-7 .info{
+    display: flex;
+    height: 150px;
+    flex-direction: column;
+    justify-content: space-between;
+    color: #222222;
+    padding: 12px;
+}
+.sec-7 .info> .rating, .info>p{
+    font-size: 12px;
+}
+.sec-7 .rating> span, .info>p{
+  color: #8D8D8D;
+}
+.sec-7 .info> h3{
+    font-size: 16px;
+}
+.sec-7 .info .price{
+    font-size: 24px;
+}
+.sec-7 .btn-container{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.sec-7 .btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: #484848;
+    padding: 10px 24px;
+    font-size: 14px;
+    cursor: pointer;
+    width: 126px;
+    height: 40px;
+    box-shadow: 0px 2px 8px rgba(0, 0, 0, 0.25);
+    border-radius: 41px;
+}
+.sec-8{
+    display: flex;
+    margin-bottom: 40px;
+    padding: 50px 0;
+    flex-direction: column;
+    color: #222222;
+    background: #F6F4F8;
+    align-items: center;
+}
+.sec-8 > h2{
+    display: flex;
+    font-family:sans-serif;
+    font-size: 36px;
+}
+.sec-8 > .cards{
+    display: flex;
+    width: 80%;
+    justify-content: space-around;
+    margin-top: 40px;
+}
 
-    background: red;
+.sec-9{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.sec-9>h2{
+    font-size: 36px;
+    color: #222222;
+    margin-bottom: 12px;
+    font-weight: 900;
+}
+.sec-9>h3{
+    font-weight: 500;
+    line-height: 20px;
+    font-size: 20px;
+    color: #222222;
+}
+
+.img-card-container{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 48px;
+    flex-wrap: wrap;
+}
+.img-card{
+    height: 80px;
+    width: 160px;
+    margin-bottom: 20px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    box-sizing: border-box;
+    justify-content: space-between;
+    padding: 6px;
+    background: #FFFFFF;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1), 0px 12px 32px rgba(0, 0, 0, 0.05);
+    border-radius: 8px;
+    border: 1px solid #E6E6E6;
+}
+.img-card>span{
+    font-weight: 500;
+    color:  #707070;
+    font-size: 14px;
+}
+
+
+.sec-10{
+    height: 400px;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    color: white;
+    box-sizing: border-box;
+    background-position: center;
+    background-size: cover;
+    background-image:linear-gradient(rgba(0, 0, 0, 0.3), rgba(0, 0, 0, 0.3)), url('/assets/tarot-card.webp');
+
+}
+
+.sec-10>h2{
+    color: #fff;
+    font-weight: 700;
+    font-size: 56px;
+    margin-bottom: 80px;
+}
+
+.sec-10>.btn{
+    width: 312px;
+    height: 55px;
+    border-radius: 8px;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: linear-gradient(180deg, #6B17FF 0%, #7F11F6 100%);
 }
